<resources>
    <string name="app_name">Proyecto app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_bienvenida">BienvenidaActivity</string>
    <string name="mi_restaurante">Mi Restaurante</string>
    <string name="que_comeremos_hoy">¿Que comeremos hoy?</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="password">Contraseña</string>
    <string name="inicia_sesion">Inicia Sesion</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="menu_diario">Menu Diario</string>
    <string name="favoritos">Favoritos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carrito">Carrito</string>
    <string name="cuenta">Cuenta</string>
    <string name="inicio">Inicio</string>
    <string name="_10_00_15_00_min">10:00 - 15:00 min</string>
    <string name="nombre_del_producto">Nombre del Producto</string>
    <string name="_5_0">5.0</string>
    <string name="_125_00">$125.00</string>
    <string name="hacer_pedido">Hacer Pedido</string>
    <string name="mi_carrito">Mi Carrito</string>
</resources>