<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_menu_diario"
            android:icon="@drawable/baseline_restaurant_menu_24"
            android:title="@string/menu_diario" />
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/favoritos" />
        <item
            android:id="@+id/nav_carrito"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/carrito" />
    </group>
</menu>